fix the main table creating an overflow
The reason why it overflows like this is still not entirely
clear but clipping it effectively seems to fix it.

Closes https://github.com/chimera-linux/apkbrowser/pull/1

--- a/static/css/packages.css
+++ b/static/css/packages.css
@@ -163,7 +163,7 @@ body {
 
 #main-list {
     width: 100%;
-    overflow-x: auto;
+    overflow-x: clip;
 }
 
 #main-list table {
